--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -9,7 +9,7 @@
 		<span class="icon-bar"></span>
 		</button>
 
-		<a class="navbar-brand" href="<%= root_path%>">严选商城</a>
+		<a class="navbar-brand" href="<%= root_path%>">不知道什么猫商城</a>
 	   	</div>
 	   	<!-- Collect the nav links,forms,and other content for toggling -->
          <div class="collapse navbar-collapse" id="bs-exaple-navbar-collapse-1">
