--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,11 @@
   <div class="col-lg-3">
     <%= render 'shared/categories' %>
   </div>
+
   <div class="col-lg-9">
     <ol class="breadcrumb">
-      <li class="active">Home</li>
+      <li class="active">Home   have bug:zhengzhidu@gmail.com
+</li>
     </ol>
     <%= render 'shared/products' %>
   </div>
