--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>严选商城</title>
+    <title>天喵🐱</title>
+    <link rel="icon" href="image/alipay" type="image/alipay" />
     <meta name="viewport"  content="width=device-width",initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
     <%= csrf_meta_tags %>
